--- a/InstaBook/templates/profile.html
+++ b/InstaBook/templates/profile.html
@@ -32,8 +32,8 @@
 					<div class="add-btn">
 					<span style="color: white; font-size: 27px; margin-right: 520px;"><b><u><a href="/">Home</a></u></b></span>
 					<span style="color: white; font-size: 27px;"><b>{{user_post_length}} Post</b></span>
-					<span style="color: white; font-size: 27px;"><b>1.7m followers</b></span>
-					<span style="color: white; font-size: 27px;"><b>3.5k following</b></span>
+					<span style="color: white; font-size: 27px;"><b>{{user_followers}} Followers</b></span>
+					<span style="color: white; font-size: 27px;"><b>{{user_following}} Following</b></span>
 					
 					<input type="hidden" value="{{user.username}}" name="follower" />
 					<input type="hidden" value="{{user_object.username}}" name="user" />
