fixed text post feature

--- a/InstaBook/templates/index.html
+++ b/InstaBook/templates/index.html
@@ -79,7 +79,7 @@
                                     <div>
                                         <input type="file" name="post_image">
                                         <!-- <a href="#" class="button soft-warning small"> Choose file</a> -->
-                                        <textarea class="button soft-warning small" name="caption" placeholder="caption..."></textarea>
+                                        <textarea class="shadow-none bg-gray-100" name="caption" placeholder="Text for Image... Or Just Texts!"></textarea>
                                         <br>
                                         <button class="button bg-blue-700" type="submit" >Upload</button>
                                     </div>
